K1J-391: Clean up sonarlint warnings in service layer